--- a/.github/workflows/agents_run.yml
+++ b/.github/workflows/agents_run.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install deps
-        run: pip install openai beautifulsoup4
+        run: pip install openai==0.28 beautifulsoup4
       - name: Run agents (generate content & pages)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
