--- a/.github/workflows/agents_run.yml
+++ b/.github/workflows/agents_run.yml
@@ -10,9 +10,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Installer dépendances
+      - name: Exécuter pipeline IA complet
         run: |
-          pip install transformers torch sentencepiece beautifulsoup4 accelerate
+          python agents/agent_auto_run.py
       - name: Générer contenu & pages
         run: |
           python agents/agent_generate_content.py
