--- a/.github/workflows/agents_run.yml
+++ b/.github/workflows/agents_run.yml
@@ -1,30 +1,48 @@
-name: Agents HotProd - run (HuggingFace)
+name: Agents HotProd - run (HuggingFace + PDF)
+
 on:
   workflow_dispatch:
+
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Python
+      - name: 🧩 Cloner le dépôt
+        uses: actions/checkout@v4
+
+      - name: ⚙️ Configurer Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-      - name: Exécuter pipeline IA complet
+          python-version: "3.10"
+
+      - name: 📦 Installer dépendances système (pip + libs)
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+
+      - name: 📥 Installer dépendances Python (robuste)
+        run: |
+          # Installe les paquets avec --no-cache-dir pour économiser espace disque
+          pip install --no-cache-dir transformers torch sentencepiece beautifulsoup4 accelerate pdfplumber pillow
+
+      - name: 🧠 Exécuter pipeline complet IA + PDF
         run: |
           python agents/agent_auto_run.py
-      - name: Générer contenu & pages
+
+      - name: 💾 Commit & Push résultats
         run: |
-          python agents/agent_generate_content.py
-          python agents/agent_build_html.py
-          python agents/agent_index_root.py
-          python agents/agent_qa.py
-      - name: Upload pages générées
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add .
+          git commit -m "🔁 Mise à jour automatique du site HotProd (pipeline complet)" || echo "no changes to commit"
+          git push || echo "push failed"
+
+      - name: 📤 Sauvegarder artefacts générés
         uses: actions/upload-artifact@v4
         with:
-          name: generated-pages
+          name: site-hotprod
           path: |
-            fr/index.html
-            en/index.html
-            agents/results/contenu_fr.json
-            agents/results/contenu_en.json
+            fr/
+            en/
+            agents/results/
+            index.html
