--- a/.github/workflows/deploy_hotprod.yml
+++ b/.github/workflows/deploy_hotprod.yml
@@ -1,4 +1,4 @@
-name: 🚀 Déploiement HotProd (FR/EN + SEO + Minify)
+name: Deploy HotProd site (FR/EN + SEO + Minify)
 
 on:
   push:
@@ -11,32 +11,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📦 Cloner le dépôt
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🐍 Configurer Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: ⚙️ Installer dépendances
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install htmlmin css-html-js-minify beautifulsoup4
 
-      - name: 🧠 Optimisation SEO automatique
+      - name: Run SEO optimization
         run: |
           python agents/agent_seo_optimize.py
 
-      - name: 🧩 Minification HTML/CSS
+      - name: Minify HTML and CSS
         run: |
-          python - <<'PY'
+          python - <<EOF
 import os, htmlmin
 from css_html_js_minify import process_single_html_file
+
 for root, _, files in os.walk("."):
     for f in files:
         if f.endswith(".html") or f.endswith(".css"):
-            if root.startswith("./.github"): 
+            if root.startswith("./.github"):
                 continue
             path = os.path.join(root, f)
             try:
@@ -51,9 +52,9 @@ for root, _, files in os.walk("."):
                 print(f"✅ Minifié : {path}")
             except Exception as e:
                 print(f"⚠️ Erreur sur {path}: {e}")
-PY
+EOF
 
-      - name: 🌍 Déploiement sur GitHub Pages
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
